# EchoBot

echowalker_control/: CMakeLists.txt  package.xml
echowalker_control/launch/: sound_control.launch.py
echowalker_control/scripts/: gait_controller.py  gazebo_gait_controller.py  sound_simulator.py
echowalker_description/: CMakeLists.txt  package.xml
echowalker_description/config/: echowalker_controllers.yaml
echowalker_description/launch/: display.launch.py  display_with_sound.launch.py  gazebo.launch.py  gazebo_with_sound.launch.py
echowalker_description/rviz/: echowalker.rviz  gazebo_echowalker.rviz
echowalker_description/urdf/: echowalker.urdf.xacro  echowalker_base.xacro  echowalker_gazebo.urdf.xacro  echowalker_inertia.xacro  echowalker_legs.xacro  echowalker_materials.xacro
echowalker_description/worlds/: echowalker.sdf
