<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>echowalker_control</name>
  <version>0.1.0</version>
  <description>
    Control package for the EchoWalker robot - ROS2 Jazzy compatible
  </description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>echowalker_description</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>